--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,23 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap");
+@tailwind base;
+
+@layer base {
+  html {
+    @apply text-surface;
+    @apply bg-white;
+  }
+  html.dark {
+    @apply text-neutral-50;
+    @apply bg-body-dark;
+  }
+}
+
+@tailwind components;
+@tailwind utilities;
+
+p {
+  @apply leading-[1.6];
+}
 /* You can add global styles to this file, and also import other style files */
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
