--- a/src/app/product/layouts/layout-product/layout-product.component.html
+++ b/src/app/product/layouts/layout-product/layout-product.component.html
@@ -1,5 +1,4 @@
 
-
 <div class="row">
   <div class="col-*-*">
     <shared-navbar placeholder="buscar..."></shared-navbar>
@@ -9,13 +8,13 @@
     <shared-sidebar></shared-sidebar>
   </div>
 
-  <div class="col">
+  <div class="col-8">
       <router-outlet></router-outlet>
   </div>
 
-  <!-- <div class="col">
-    <shared-sidebar></shared-sidebar>
-  </div>-->
+  <div class="col">
+   <!--  <shared-sidebar></shared-sidebar> -->
+  </div>
 
   <div class="col-*-*">
     <shared-footer></shared-footer>
